--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "rugal-core will contain all the e-commerce related logic like order, checkout, cart, shipping, tax, inventory",
   "main": "./lib/index.js",
   "scripts": {
+    "dev": "NODE_ENV=development nodemon ./index.ts",
     "start": "node ./index.js",
     "test": "./node_modules/mocha/bin/_mocha lib/test/**/*.js",
     "code-coverage": "istanbul cover --hook-run-in-context node_modules/mocha/bin/_mocha -- -R spec lib/test/**/*.js"
@@ -12,6 +13,9 @@
   "author": "MD. Jahidul Islam",
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.0.36",
+    "@types/lodash": "^4.14.66",
+    "@types/node": "^7.0.31",
     "chai": "^4.0.0",
     "istanbul": "^0.4.5",
     "jscs": "^3.0.7",
@@ -23,6 +27,8 @@
     "debug": "^2.6.8",
     "express": "^4.15.3",
     "lodash": "^4.17.4",
-    "nconf": "^0.8.4"
+    "nconf": "^0.8.4",
+    "ts-node": "^3.0.4",
+    "typescript": "^2.3.3"
   }
 }
