--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "NODE_ENV=development nodemon ./index.ts",
     "start": "node ./index.js",
-    "test": "./node_modules/mocha/bin/_mocha lib/test/**/*.js",
+    "test": "./node_modules/mocha/bin/_mocha -r ts-node/register test/**/*.test.*",
     "code-coverage": "istanbul cover --hook-run-in-context node_modules/mocha/bin/_mocha -- -R spec lib/test/**/*.js"
   },
   "keywords": [],
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/express": "^4.0.36",
     "@types/lodash": "^4.14.66",
+    "@types/mocha": "^2.2.41",
     "@types/node": "^7.0.31",
     "chai": "^4.0.0",
     "istanbul": "^0.4.5",
@@ -24,10 +25,14 @@
   },
   "dependencies": {
     "bluebird": "^3.5.0",
+    "bunyan": "^1.8.10",
     "debug": "^2.6.8",
     "express": "^4.15.3",
+    "json-stringify-safe": "^5.0.1",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "nconf": "^0.8.4",
+    "prettyjson": "^1.2.1",
     "ts-node": "^3.0.4",
     "typescript": "^2.3.3"
   }
