--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "bunyan": "^1.8.10",
+    "compression": "^1.6.2",
     "debug": "^2.6.8",
     "express": "^4.15.3",
+    "intl-messageformat": "^1.3.0",
     "json-stringify-safe": "^5.0.1",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
