--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "baseUrl": "./",
     "paths": {},
     "typeRoots": [
-      "node_modules/@types"
+      "node_modules/@types",
+      "@types"
     ],
     "sourceMap": true,
     "emitDecoratorMetadata": true,
@@ -19,7 +20,7 @@
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": false,
     "noImplicitReturns": true,
-    "noImplicitThis": false,
+    "noImplicitThis": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false
   },
