--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "moment": "^2.18.1",
     "nconf": "^0.8.4",
     "prettyjson": "^1.2.1",
+    "rxjs": "^5.4.2",
     "ts-node": "^3.0.4",
     "typescript": "^2.3.3"
   }
