--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "bluebird": "^3.5.0",
     "bunyan": "^1.8.10",
     "compression": "^1.6.2",
+    "cors": "^2.8.4",
     "debug": "^2.6.8",
     "express": "^4.15.3",
+    "express-list-endpoints": "^3.0.0",
     "intl-messageformat": "^1.3.0",
     "json-stringify-safe": "^5.0.1",
     "lodash": "^4.17.4",
